# tt-toplike-rs

./: CLAUDE.md  Cargo.toml  README.md
src/: cli.rs
src/animation/: memory_castle.rs
src/backend/: factory.rs
src/ui/gui/: terminal_canvas.rs
